# super-money-printer

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
backend/: __init__.py  __main__.py  config.py  main.py
backend/db/: __init__.py  connection.py  schema.py
backend/providers/: __init__.py  base.py  exceptions.py  registry.py  retry.py
backend/providers/akshare/: __init__.py  field_mapping.py  provider.py
backend/routes/: alerts.py  cache.py  etf.py  health.py  index.py  jobs.py  macro.py  sector.py  stocks.py  ws.py
backend/scheduler/: __init__.py  bus.py  jobs.py
backend/services/: alert_service.py  cache_service.py  etf_service.py  index_service.py  macro_service.py  sector_analytics_service.py  sector_service.py  stock_service.py
config/: default.yaml
docs/: spec.md
frontend/: .archive-index-vanilla.html  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
frontend/.archive-js/: app.js  state.js  utils.js
frontend/js/: app.js
frontend/src/: App.tsx  api.ts  main.tsx  store.ts  styles.css
scripts/: backfill_volume_2026_06_29.py  init_db.py  migrate_from_reference.py
tests/: __init__.py  conftest.py  test_alerts.py  test_cache.py  test_new_apis.py  test_pool.py  test_routes_extended.py  test_scheduler.py  test_services.py  test_stock_service.py
tests/test_api/: __init__.py  test_health.py  test_index_kline.py
tests/test_providers/: __init__.py  test_akshare.py  test_baostock.py  test_base.py  test_registry.py
(+47 files in other folders)
