[project]
name = "super-money-printer"
version = "0.1.0"
description = "ETF Dashboard refactor — multi-source data acquisition layer"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.5",
    "apscheduler>=3.10",
    "tenacity>=9.0",
    "httpx>=0.27",
    "akshare==1.18.64",
    "baostock==0.9.2",
    "requests>=2.32",
    "pandas>=2.2",
    "pyyaml>=6.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
exclude = ["tests*", "scripts*", "frontend*", "docs*", "config*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"